# jojo-client

./: .gitignore  Cargo.toml  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
common/: Cargo.toml  build.rs
common/src/: broadcast.rs  led.rs  lib.rs  websocket.rs  wifi_client.rs
joystick/: Cargo.toml
joystick/src/client/: mod.rs
joystick/src/client/peripherals/: axis.rs  button.rs  mod.rs
mouse/: Cargo.toml
mouse/src/: main.rs
mouse/src/client/: mod.rs
mouse/src/client/peripherals/: button.rs  mod.rs  stick.rs
otp/: Cargo.toml
otp/src/: lib.rs  nvs.rs  server.rs  wifi_otp.rs
src/: button.rs  led.rs  main.rs  server.rs  stick.rs  websocket.rs  wifi.rs  wifi_otp.rs
src/client/: broadcast.rs  mod.rs  stick.rs  websocket.rs  wifi_client.rs
src/client/mouse/: button.rs  left_click.rs  mod.rs  stick.rs
src/otp/: mod.rs  nvs.rs  server.rs  wifi_otp.rs
