[package]
name = "mouse-client"
version = "0.1.0"
authors = ["gggiu <gggiulio77@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["std", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-svc = { version = "0.47.1", optional = true, default-features = false }
esp-idf-hal = { version = "0.42", default-features = false }
anyhow = "1.0.71"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
crossbeam-channel = "0.5.8"
futures = "0.3.28"
parking_lot = "0.12.1"
rgb = "0.8.36"
rand = "0.8.5"
url = "2.4.0"
tungstenite = "0.21"
bincode = "1.3.3"
bus = "2.4.0"
heapless = { version = "0.8", features = ["serde"] }
jojo-common = { path = "C:/Users/gggiu/Documents/personal-projects/rust/jojo-common" }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "serde"] }

[build-dependencies]
embuild = "0.31.4"
dotenv = "0.15.0"
