[workspace]
resolver = "2"

members = ["otp", "common", "mouse", "joystick"]
default-members = ["otp", "common", "mouse", "joystick"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[workspace.dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = { version = "0.43", default-features = false }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
futures = "0.3"
parking_lot = "0.12"
rgb = "0.8"
rand = "0.8"
url = "2.4"
tungstenite = "0.21"
bincode = "1.3"
bus = "2.4"
heapless = { version = "0.8", features = ["serde"] }
jojo-common = { path = "C:/Users/gggiu/personal-projects/jojo-common" }
uuid = { version = "1.8", features = ["v4", "fast-rng", "serde"] }
embuild = "0.31"
dotenv = "0.15"
